[OPIK-729] Delete attachments (#1667)